--- a/Docker/miniproject/backend/Dockerfile
+++ b/Docker/miniproject/backend/Dockerfile
@@ -1,6 +1,11 @@
-FROM python:3.9
+FROM python:3.10-slim
+
 WORKDIR /app
-COPY . .
+
+COPY . /app
+
 RUN pip install -r requirements.txt
+
 EXPOSE 5000
+
 CMD ["python", "app.py"]
